5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_2445.log
== TEST (2019-04-11 11:22:49) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(5/9)*temp)+32
	
-- ERROR:
File "XXXX", line 5
    C=(5/9)*temp)+32
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:01) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(9/5)*temp)+32
	
-- ERROR:
File "XXXX", line 5
    C=(9/5)*temp)+32
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:31) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(((5/9))*temp)+32
	
-- ERROR:
File "XXXX", line 5
    C=(9/5)*temp)+32
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:25) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(((5/9))*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(c,2))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:25:33) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(((5/9))*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.150861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 10, in <module>
    print(round(c,2))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:25:55) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(((5/9))*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.203315
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:57) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=(((5/9))*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:26:42) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.214966
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:08:30) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:08:41) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.318018
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:11:22) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.227831
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:27) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:27) 
-- CODE:
esc=input("escala de temperatura: ").upper
temp=float(input("temperatura: "))

if(esc=="C"):
	C=((5/9)*temp)+32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:13:16) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc.upper=="C"):
	c=((5/9)*temp)-32
	
else:
	c=(5/9)*(temp-32)
	
print(round(c,2))
-- EXECUTION TIME:
0.189678
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:04) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc.upper=="C"):
	c=((5/9)*temp)-32
	
else:
	c=((9/5)*temp)+32
	
print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:15) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc.upper=="C"):
	c=((5/9)*temp)-32
	
else:
	c=((9/5)*temp)+32
	
print(round(c,2))
-- EXECUTION TIME:
0.174099
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:39) 
-- CODE:
esc=input("escala de temperatura: ")
temp=float(input("temperatura: "))

if(esc.upper=="C"):
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	c=((9/5)*temp)+32
	print(round(c,2))
-- EXECUTION TIME:
0.194768
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:17:45) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9/5)*temp)+32
	print(round(c,2))
-- EXECUTION TIME:
0.174487
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
608.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:17:45) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9/5)*temp)+32
	print(round(c,2))
-- EXECUTION TIME:
0.18234
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:17:47) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9/5)*temp)+32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:18:10) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9/5)*temp)+32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:18:24) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9/5)*temp)+32
	print(round(c,2))
-- EXECUTION TIME:
0.15984
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:20:06) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:20:20) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=((5/9)*temp)-32
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:19) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:23:19) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.150264
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
608.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:23:19) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.229394
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:23:58) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.168105
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:58) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:24:00) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.232852
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:24:01) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.138688
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:24:02) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.121942
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:05) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:24:45) 
-- CODE:
esc=input("escala de temperatura: ")

if(esc.upper=="C"):
	temp=float(input("temperatura: "))
	c=(5*(temp-32))/9
	print(round(c,2))
else:
	temp=float(input("temperatura: "))
	c=((9*temp)/(5)) + 32
	print(round(c,2))
-- EXECUTION TIME:
0.222226
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
